--- a/FitMap/app/src/main/res/values/strings.xml
+++ b/FitMap/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string-array name="regios">
+        <item>Antwerpen</item>
+        <item>Brussel</item>
+        <item>Limburg</item>
+        <item>Oost-Vlaanderen</item>
+        <item>Vlaams-Brabant</item>
+        <item>West-Vlaanderen</item>
+    </string-array>
 </resources>
